<resources>
    <string name="app_name">TP-Android</string>
    <string name="tp1">TP 1</string>
    <string name="tp2">TP 2</string>
    <string name="email">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="connecter">SE CONNECTER</string>
    <string name="tp3">TP 3</string>
    <string name="tp4">TP 4</string>
    <string name="title_activity_t_p4">TP4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_label_1">text_label_1</string>
    <string name="text_label_2">text_label_2</string>
    <string name="fragment_1">Fragment 1!</string>
    <string name="fragment_2">Fragment 2 !</string>
</resources>
